// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Lozenge with tooltipIcon 1`] = `
.c1 {
  vertical-align: middle;
  height: 1.25rem;
  width: 1.25rem;
}

.c0 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  padding-inline: 0.75rem 0.25rem;
  white-space: nowrap;
  background-color: #D3F5D9;
  color: #004D0D;
}

<span
  class="c0"
>
  Lozenge
   
  <svg
    aria-hidden="true"
    class="c1"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1m1-8h-2V7h2z"
    />
  </svg>
</span>
`;

exports[`render alpha Lozenge 1`] = `
.c0 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  padding-inline: 0.75rem;
  white-space: nowrap;
  background-color: #FFF0BF;
  color: #313440;
}

<span
  class="c0"
>
  Alpha
</span>
`;

exports[`render beta Lozenge 1`] = `
.c0 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  padding-inline: 0.75rem;
  white-space: nowrap;
  background-color: #DBE3FE;
  color: #2852EB;
}

<span
  class="c0"
>
  Beta
</span>
`;

exports[`render default Lozenge 1`] = `
.c0 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  padding-inline: 0.75rem;
  white-space: nowrap;
  background-color: #D3F5D9;
  color: #004D0D;
}

<span
  class="c0"
>
  Lozenge
</span>
`;

exports[`render deprecated Lozenge 1`] = `
.c0 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  padding-inline: 0.75rem;
  white-space: nowrap;
  color: #80000B;
  background-color: #FEDBDE;
}

<span
  class="c0"
>
  Deprecated
</span>
`;

exports[`render legacy Lozenge 1`] = `
.c0 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  padding-inline: 0.75rem;
  white-space: nowrap;
  background-color: #D9DCE9;
  color: #313440;
}

<span
  class="c0"
>
  Legacy
</span>
`;

exports[`render new Lozenge 1`] = `
.c0 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  padding-inline: 0.75rem;
  white-space: nowrap;
  background-color: #D3F5D9;
  color: #004D0D;
}

<span
  class="c0"
>
  New
</span>
`;
